--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* Importing Bootstrap SCSS file. */
-@use '../node_modules/bootstrap/scss/bootstrap.scss' as *;
-
-@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+:root{
+    --text-black-color: #222222;
+    --text-secondary-color: #555555;
+    --background-secondary-color: #242424;
+    --text-secondary-color-hover: #000000;
+    --text-color-reversed: #dadada;
+    --text-color-reversed-highlighted: #fff;
+    --background: #f5f5f5;
+    --background-darker: #dbdbdb;
+}
+body{
+    margin: 0;
+    padding: 0;
+}
